# tmux-mcp

./: .gitignore  LICENSE  README.md  TMUX_MCP_DESIGN.md  pyproject.toml
src/tmux_mcp/: server.py
